2012-03-21  Ryosuke Niwa  <rniwa@webkit.org>

        Increment the perf-o-matic app version.

        * Websites/webkit-perf.appspot.com/app.yaml:

2012-03-20  Eric Seidel  <eric@webkit.org>

        Move wtf/Platform.h from JavaScriptCore to Source/WTF/wtf
        https://bugs.webkit.org/show_bug.cgi?id=80911

        Reviewed by Adam Barth.

        * CMakeLists.txt: Define WTF_DIR

2012-03-20  Ryosuke Niwa  <rniwa@webkit.org>

        Perf-o-matic: don't query datastore to generate chart API urls
        https://bugs.webkit.org/show_bug.cgi?id=81499

        Reviewed by Hajime Morita.

        Parse json text to extract timestamps and test values instead of iterating
        through the data store.

        * Websites/webkit-perf.appspot.com/create_handler.py:
        (CreateHandler.post):
        * Websites/webkit-perf.appspot.com/models.py:
        (Runs._timestamp_and_value_from_json_entry):
        (Runs):
        (Runs.to_json):
        (Runs.chart_params):

2012-03-20  Gyuyoung Kim  <gyuyoung.kim@samsung.com>

        Convert hasSpellingMarker to use Internals interface.
        https://bugs.webkit.org/show_bug.cgi?id=81300

        Reviewed by Ryosuke Niwa.

        * Source/autotools/symbols.filter: Export a symbol for hasSpellingMarker.

2012-03-19  Tony Chang  <tony@chromium.org>

        clean up gitignore
        https://bugs.webkit.org/show_bug.cgi?id=81594

        Reviewed by James Robinson.

        * .gitignore: .suo files are per-user files used by VS2010. .ninja
        files are no longer generated in the tree-- they are generated in the
        build directory.

2012-03-17  Charles Wei  <charles.wei@torchmobile.com.cn>

        [BlackBerry] Enable Web Timing for performance profiling and improvement.
        https://bugs.webkit.org/show_bug.cgi?id=81085

        Reviewed by Rob Buis.

        * Source/cmake/OptionsBlackBerry.cmake:
        * Source/cmakeconfig.h.cmake:

2012-03-16  Kihong Kwon  <kihong.kwon@samsung.com>
